<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AndroidSolution</string>
    <string name="gol_name">GOL</string>

    <!--Flight selection texts-->
    <string name="select_your_flight">Escolha o seu voo</string>
    <string name="cost_info">Todas as nossas tarifas incluem o valor da taxa de embarque</string>
    <string name="flight_date_explanation">Sexta, 16/04\n - A partir de 643,00</string>
    <string name="flight_origin">Origem</string>
    <string name="flight_example">SDU - 08:00</string>
    <string name="flight_destiny">Destino</string>
    <string name="flight_example2">POA - 10:00</string>
    <string name="airplane_icon_desc">Ícone avião</string>
    <string name="price_fanfare">A partir de</string>
    <string name="flight_price_example">R$ 612,20</string>
    <string name="select_flight_text">Escolher viagem</string>
    <string name="flight_text_header">Encontre os melhores voos com as melhores ofertas</string>

    <!--Passenger data texts-->
    <string name="passenger_text_header">Preencha os dados do passageiro</string>
    <string name="first_name">PRIMEIRO NOME:</string>
    <string name="first_name_hint">Digite seu primeiro nome</string>
    <string name="last_name">ÚLTIMO NOME:</string>
    <string name="last_name_hint">Digite seu último nome</string>
    <string name="birth_date">DATA DE NASCIMENTO:</string>
    <string name="gender">GÊNERO:</string>
    <string name="nationality">NACIONALIDADE:</string>
    <string name="nationality_hint">País</string>
    <string name="book_flight">Finalizar reserva</string>
    <string name="loading_text">Carregando…</string>
    <string name="any_text">Any</string>
    <string name="yes_text">Sim</string>
    <string name="no_text">Não</string>
    <string name="adult_data_text">Dados do adulto</string>
    <string name="required_fields_hint">Todos os campos são obrigatórios</string>
    <string name="passenger_default_name">Giba</string>
    <string name="same_person_question">, você é o passageiro dessa viagem?</string>
    <string name="no_flight_found">Nenhum voo encontrado para o dia selecionado</string>

    <!--Main data texts-->
    <string name="lock_content_description">Cadeadro laranja</string>
    <string name="loading_flights">Carregando voos…</string>
    <string name="error_loading_flight">Erro ao procurar por voo</string>
    <string name="server_error" tools:ignore="Typos">Mundo indisponível no momento</string>

    <!--Flight data texts-->
    <string name="txt_text_view_destiny_date">DATA DA VIAGEM DE VOLTA</string>
    <string name="txt_edit_text_date">Quando?</string>
    <string name="txt_flight_icon">Icon</string>
    <string name="txt_text_view_origin_date">DATA DA VIAGEM DE IDA</string>
    <string name="txt_text_view_trecho">TRECHO</string>
    <string name="txt_text_view_origin">SAINDO DE</string>
    <string name="txt_text_view_destiny">INDO PARA</string>
    <string name="txt_text_view_flight_passengers">PASSAGEIROS</string>
    <string name="txt_edit_text_passenger">1 adulto(s)</string>
    <string name="search_flight">Pesquisar voos</string>

    <!--Flight data modal texts-->
    <string name="txt_client_text_view_modal">Cliente</string>
    <string name="txt_adult_text_view_modal">Adultos</string>
    <string name="txt_one">1</string>
    <string name="txt_zero">0</string>
    <string name="txt_adult_text_view_modal_sub">Mais de 12 anos</string>
    <string name="txt_child_text_view_modal">Crianças</string>
    <string name="txt_child_text_view_modal_sub">2 a 11 anos</string>
    <string name="txt_baby_text_view_modal">Bebês</string>
    <string name="txt_baby_text_view_modal_sub">0 a 23 meses</string>
    <string name="txt_btn_continue">Continuar</string>

    <!--Booking texts-->
    <string name="successful_booking">Reserva efetuada com\nsucesso</string>
    <string name="go_back">Voltar ao início</string>
    <string name="login_header">Faça login para continuar</string>

    <!--Login texts-->
    <string name="email">Email</string>
    <string name="dummy_email">rm346790@fiap.com.br</string>
    <string name="password">Senha</string>
    <string name="dummy_password">re23!@agh12#$</string>
    <string name="login">Login</string>
    <string name="slogan">Carregando um novo mundo de possibilidades…</string>
</resources>